fix header on mobile

--- a/style.css
+++ b/style.css
@@ -684,6 +684,11 @@ header.slideIn {
     filter: blur(3px);
   }
 
+  .land > h3 {
+    font-size: 9px;
+    letter-spacing: 2px;
+  }
+
   .mobile-links {
     display: flex;
     align-items: center;
@@ -825,8 +830,8 @@ header.slideIn {
   }
 
   .land > h3 {
-    font-size: 9px !important;
-    letter-spacing: 2px !important;
+    font-size: 9px;
+    letter-spacing: 2px;
   }
 
   .mobile-links {
